--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=${PORT:8888}
 
 # SQLite 数据源
-spring.datasource.url=jdbc:sqlite:${SQLITE_PATH:./data/yihangnav.db}
+spring.datasource.url=jdbc:sqlite:${SQLITE_PATH:./data/yidiannav.db}
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -10,7 +10,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-app.security.jwt.secret=${JWT_SECRET:change-me-secret}
+app.security.jwt.secret=${JWT_SECRET:change-me-secret-please-use-32bytes-minimum-123456}
 app.security.jwt.expire-hours=${JWT_EXPIRE_HOURS:24}
 
 # 默认管理员
